ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/Final_Term__c.object-meta.xml
<CustomObject>
    <description>To store Final term module data.</description>
    <label>Final Term</label>
    <nameField>
        <displayFormat>FT-{000000}</displayFormat>
        <label>Final Term Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Final Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>