ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Advance_EMI__c.field-meta.xml
<CustomField>
    <fullName>Advance_EMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advance EMI</label>
    <type>Checkbox</type>
</CustomField>