ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Agreement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Amount__c</fullName>
    <formula>IF(
  OR(
    ISBLANK(TEXT(Holiday_period__c)), ISPICKVAL(Loan_Application__r.LeadSource,&quot;OLA&quot;)
  )  
  , EMI_Amount__c * VALUE(Tenure__c), EMI_Amount__c * (VALUE(Tenure__c) - 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>