ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Approving_Authority_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approving_Authority_Loan_Amount__c</fullName>
    <description>Approving Authority changed loan amount on CAM page including Funded Premium</description>
    <label>Approving Authority Loan Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>