ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Available_Disbursal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Available_Disbursal_Amount__c</fullName>
    <label>Available Disbursal Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>