ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Bank_IRR__c.field-meta.xml
<CustomField>
    <fullName>Bank_IRR__c</fullName>
    <label>Bank IRR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>