ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Business_Executive__c.field-meta.xml
<CustomField>
    <fullName>Business_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Executive_Final_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>