ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Calculated_Gross_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Gross_Invoice_Amount__c</fullName>
    <label>Calculated Gross Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>