ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/CAM_NET_IRR__c.field-meta.xml
<CustomField>
    <fullName>CAM_NET_IRR__c</fullName>
    <label>CAM NET IRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>