ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/CashFlowPerAnnum__c.field-meta.xml
<CustomField>
    <fullName>CashFlowPerAnnum__c</fullName>
    <label>CashFlowPerAnnum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>