ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/ChangeVariantOfferCalled__c.field-meta.xml
<CustomField>
    <fullName>ChangeVariantOfferCalled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is updated to true when offer engine API (without Insurance) is called from Change Variant Income Screen Section and set to false whenever in further step offer engine API is called with Insurance.</description>
    <label>ChangeVariantOfferCalled</label>
    <type>Checkbox</type>
</CustomField>