ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Current_Residence_FI__c.field-meta.xml
<CustomField>
    <fullName>Current_Residence_FI__c</fullName>
    <label>Current Residence FI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>