ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Dealer_Disc_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Disc_to_Customer__c</fullName>
    <label>Dealer Disc to Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>