ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Dealer_incentive_amount_main_dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer_incentive_amount_main_dealer__c</fullName>
    <label>Dealer incentive amount - main dealer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>