ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Delinquency_Fund__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Fund__c</fullName>
    <label>Delinquency Fund</label>
    <length>18</length>
    <type>Text</type>
</CustomField>