ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Derived_CRM_IRR__c.field-meta.xml
<CustomField>
    <fullName>Derived_CRM_IRR__c</fullName>
    <label>Derived CRM IRR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>