ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Dlr_Exp_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Dlr_Exp_Reimbursement__c</fullName>
    <label>Dlr Exp. Reimbursement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>