ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Dlr_Exp_Reimbursement_percent__c.field-meta.xml
<CustomField>
    <fullName>Dlr_Exp_Reimbursement_percent__c</fullName>
    <label>Dlr Exp. Reimbursement %</label>
    <length>20</length>
    <type>Text</type>
</CustomField>