ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Do_you_want_to_initiate_e_NACH__c.field-meta.xml
<CustomField>
    <fullName>Do_you_want_to_initiate_e_NACH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to store the value of &apos;Do you want to initiate e-NACH for this loan application?&apos; input field from the Final Offer Page screen</description>
    <label>Do you want to initiate e-NACH</label>
    <type>Checkbox</type>
</CustomField>