ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Documentation_charges__c.field-meta.xml
<CustomField>
    <fullName>Documentation_charges__c</fullName>
    <label>Documentation charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>