ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/DR_Penal_Interest__c.field-meta.xml
<CustomField>
    <fullName>DR_Penal_Interest__c</fullName>
    <label>DR_Penal_Interest</label>
    <length>50</length>
    <type>Text</type>
</CustomField>