ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/DSM_Name2__c.field-meta.xml
<CustomField>
    <fullName>DSM_Name2__c</fullName>
    <label>DSM Name2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>