ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Due_date_shift_charges__c.field-meta.xml
<CustomField>
    <fullName>Due_date_shift_charges__c</fullName>
    <label>Due date shift charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>