ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/ECS_verification_by__c.field-meta.xml
<CustomField>
    <fullName>ECS_verification_by__c</fullName>
    <label>ECS verification by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>