ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Emp_Name__c.field-meta.xml
<CustomField>
    <fullName>Emp_Name__c</fullName>
    <label>Emp Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>