ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Fi_Score__c.field-meta.xml
<CustomField>
    <fullName>Fi_Score__c</fullName>
    <label>Fi Score</label>
    <length>18</length>
    <type>Text</type>
</CustomField>