ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Fi_Score_Band__c.field-meta.xml
<CustomField>
    <fullName>Fi_Score_Band__c</fullName>
    <label>Fi Score Band</label>
    <length>18</length>
    <type>Text</type>
</CustomField>