ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/FIwaiver_co_currentAddress__c.field-meta.xml
<CustomField>
    <fullName>FIwaiver_co_currentAddress__c</fullName>
    <label>FIwaiver co currentAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>