ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/FIwaiver_offAddress__c.field-meta.xml
<CustomField>
    <fullName>FIwaiver_offAddress__c</fullName>
    <defaultValue>&apos;Not Waived&apos;</defaultValue>
    <label>FIwaiver_offAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>