ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/FIwaiver_presentAddress__c.field-meta.xml
<CustomField>
    <fullName>FIwaiver_presentAddress__c</fullName>
    <defaultValue>&apos;Not Waived&apos;</defaultValue>
    <description>API response store here</description>
    <label>FIwaiver_PermanentAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>