ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Funding_for_Body__c.field-meta.xml
<CustomField>
    <fullName>Funding_for_Body__c</fullName>
    <label>Funding for Body</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>