ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Gift_through_dealer_amount__c.field-meta.xml
<CustomField>
    <fullName>Gift_through_dealer_amount__c</fullName>
    <label>Gift through dealer amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>