ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Gross_IRR__c.field-meta.xml
<CustomField>
    <fullName>Gross_IRR__c</fullName>
    <label>Gross IRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>