ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Inputted_IRR__c.field-meta.xml
<CustomField>
    <fullName>Inputted_IRR__c</fullName>
    <label>Inputted IRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>