ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Installment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Installment_Frequency__c</fullName>
    <label>Installment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>bi-monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half yearly</fullName>
            </value>
            <value>
                <fullName>Structured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>