ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Installment_Schedule_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Installment_Schedule_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installment Schedule Submitted</label>
    <type>Checkbox</type>
</CustomField>