ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Installment_To_Income_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Installment_To_Income_Ratio__c</fullName>
    <label>Installment To Income Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>