ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/IO_EMI_Amount__c.field-meta.xml
<CustomField>
    <fullName>IO_EMI_Amount__c</fullName>
    <label>IO Offer engine EMI Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>