ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/IO_LtvEngine_Ltv__c.field-meta.xml
<CustomField>
    <fullName>IO_LtvEngine_Ltv__c</fullName>
    <label>IO Threshold LTV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>