ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/IO_OfferengineMaxLoanAmount__c.field-meta.xml
<CustomField>
    <fullName>IO_OfferengineMaxLoanAmount__c</fullName>
    <label>IO Offer engine Max Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>