ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/IO_OfferengineMaxTenure__c.field-meta.xml
<CustomField>
    <fullName>IO_OfferengineMaxTenure__c</fullName>
    <label>IO Offer engine Max Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>