ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/IO_Tenure__c.field-meta.xml
<CustomField>
    <fullName>IO_Tenure__c</fullName>
    <label>IO Offer engine Tenure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>