ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Is_Change_Pay_In_Out_Editable__c.field-meta.xml
<CustomField>
    <fullName>Is_Change_Pay_In_Out_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Change Pay In/Out Editable</label>
    <type>Checkbox</type>
</CustomField>