ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Is_Change_Pay_In_Pay_Out_Submit_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Change_Pay_In_Pay_Out_Submit_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Change Pay In Pay Out Submit Required</label>
    <type>Checkbox</type>
</CustomField>