ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Is_Change_PayIn_PayOut_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Change_PayIn_PayOut_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Change PayIn PayOut Completed</label>
    <type>Checkbox</type>
</CustomField>