ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Is_Loan_Amount_Change_From_CAM__c.field-meta.xml
<CustomField>
    <fullName>Is_Loan_Amount_Change_From_CAM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Loan Amount Change From CAM</label>
    <type>Checkbox</type>
</CustomField>