ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/IsFiWaiverApiSucces__c.field-meta.xml
<CustomField>
    <fullName>IsFiWaiverApiSucces__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFiWaiverApiSucces</label>
    <type>Checkbox</type>
</CustomField>