ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/isNavigate__c.field-meta.xml
<CustomField>
    <fullName>isNavigate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isNavigate</label>
    <type>Checkbox</type>
</CustomField>