ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/IsOfferEngineApiFailed__c.field-meta.xml
<CustomField>
    <fullName>IsOfferEngineApiFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOfferEngineApiFailed</label>
    <type>Checkbox</type>
</CustomField>