ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/IsRequiredCRMIRRChanged__c.field-meta.xml
<CustomField>
    <fullName>IsRequiredCRMIRRChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRequiredCRMIRRChanged</label>
    <type>Checkbox</type>
</CustomField>