ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/L1_Final_Terms_Submitted__c.field-meta.xml
<CustomField>
    <fullName>L1_Final_Terms_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>L1 Final Terms Submitted</label>
    <type>Checkbox</type>
</CustomField>