ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/L1_Finance_Amount__c.field-meta.xml
<CustomField>
    <fullName>L1_Finance_Amount__c</fullName>
    <label>L1 Finance Amount</label>
    <length>10</length>
    <type>Text</type>
</CustomField>