ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/L1_L2_Final_Terms_Changed__c.field-meta.xml
<CustomField>
    <fullName>L1_L2_Final_Terms_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>L1 L2 Final Terms Changed</label>
    <type>Checkbox</type>
</CustomField>