ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/L1_Offer_Engine_Completed__c.field-meta.xml
<CustomField>
    <fullName>L1_Offer_Engine_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>L1 Offer Engine Completed</label>
    <type>Checkbox</type>
</CustomField>