ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/L1_Required_CRM_IRR__c.field-meta.xml
<CustomField>
    <fullName>L1_Required_CRM_IRR__c</fullName>
    <label>L1 Required CRM IRR</label>
    <length>5</length>
    <type>Text</type>
</CustomField>