ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Last_Offer_Engine_Equat__c.field-meta.xml
<CustomField>
    <fullName>Last_Offer_Engine_Equat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field will be marked to true when Offer Engine on Payment Request is success for Equated</description>
    <label>Last Offer Engine Equat</label>
    <type>Checkbox</type>
</CustomField>