ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <label>Offer engine Loan Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>