ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Loan_Deal_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Deal_Date__c</fullName>
    <label>Loan Deal Date</label>
    <type>Date</type>
</CustomField>