ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/LTV_as_per_LTV_engine__c.field-meta.xml
<CustomField>
    <fullName>LTV_as_per_LTV_engine__c</fullName>
    <label>LTV as per LTV engine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>