ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/LtvEngine_Ltv__c.field-meta.xml
<CustomField>
    <fullName>LtvEngine_Ltv__c</fullName>
    <label>Threshold LTV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>