ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/mclrRate__c.field-meta.xml
<CustomField>
    <fullName>mclrRate__c</fullName>
    <label>mclrRate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>