ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Mfr_Exp_Reimburse__c.field-meta.xml
<CustomField>
    <fullName>Mfr_Exp_Reimburse__c</fullName>
    <label>Mfr Exp. Reimburse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>