ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Mfr_Exp_Reimburse_Amt__c.field-meta.xml
<CustomField>
    <fullName>Mfr_Exp_Reimburse_Amt__c</fullName>
    <label>Mfr Exp. Reimburse Amt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>