ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Mfr_Exp_Reimburse_percent__c.field-meta.xml
<CustomField>
    <fullName>Mfr_Exp_Reimburse_percent__c</fullName>
    <label>Mfr Exp. Reimburse %</label>
    <length>20</length>
    <type>Text</type>
</CustomField>