ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Mfr_Exp_Reimburse_Type__c.field-meta.xml
<CustomField>
    <fullName>Mfr_Exp_Reimburse_Type__c</fullName>
    <label>Mfr Exp. Reimburse Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Separate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>