ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Mfr_incentive__c.field-meta.xml
<CustomField>
    <fullName>Mfr_incentive__c</fullName>
    <label>Mfr incentive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>