ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Income__c</fullName>
    <label>Net Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>