ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Net_IRR_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Net_IRR_Decimal__c</fullName>
    <label>Net IRR Decimal</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>