ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Net_Pay_Outs__c.field-meta.xml
<CustomField>
    <fullName>Net_Pay_Outs__c</fullName>
    <label>Net Pay Outs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>